Updated print tf version

--- a/course1_intro_to_tf/IntroTF_week1.ipynb
+++ b/course1_intro_to_tf/IntroTF_week1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFuGi2HWsHO8MnE4EF6Wqt",
+      "authorship_tag": "ABX9TyMSio47Llagf8Gc/JttPSv1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,20 +23,34 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/OleksandrOHavrylenko/ML-bootcamp/blob/main/IntroTF_week1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/OleksandrOHavrylenko/ML-bootcamp/blob/main/course1_intro_to_tf/IntroTF_week1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
-        "id": "BYGn4cFnlf0L"
+        "id": "BYGn4cFnlf0L",
+        "outputId": "e91cf7b9-dc40-4fc2-ddbc-774fe0857272",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.12.0\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "import numpy as np\n",
-        "import keras"
+        "from tensorflow import keras\n",
+        "\n",
+        "print(tf.__version__)"
       ]
     },
     {
@@ -48,7 +62,7 @@
       "metadata": {
         "id": "5TImjw5rlsg3"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -60,7 +74,7 @@
       "metadata": {
         "id": "NOjLEHSimSgW"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -73,19 +87,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_ka8XnqDmswf",
-        "outputId": "d28eb79e-6b97-44c7-b37e-43e6dc044e4f"
+        "outputId": "dbf87ae7-d927-4d58-a58e-616a9f9a0768"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fb77030c580>"
+              "<keras.callbacks.History at 0x7f7fb1c31c00>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 5
         }
       ]
     },
@@ -99,16 +113,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UauwCjalm29-",
-        "outputId": "f3e8029d-8ed9-4a79-eebd-db0386ad0e0f"
+        "outputId": "b3a56878-f1ba-4a8d-8240-0c86907a9f0b"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 41ms/step\n",
-            "[[18.446424]]\n"
+            "1/1 [==============================] - 0s 92ms/step\n",
+            "[[18.430555]]\n"
           ]
         }
       ]
