Fixed error in xs and ys arrays

--- a/course1_intro_to_tf/IntroTF_week1.ipynb
+++ b/course1_intro_to_tf/IntroTF_week1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSio47Llagf8Gc/JttPSv1",
+      "authorship_tag": "ABX9TyNLqDUjtEQ/nTslbDfyI2V4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "BYGn4cFnlf0L",
-        "outputId": "e91cf7b9-dc40-4fc2-ddbc-774fe0857272",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e91cf7b9-dc40-4fc2-ddbc-774fe0857272"
       },
       "outputs": [
         {
@@ -62,19 +62,19 @@
       "metadata": {
         "id": "5TImjw5rlsg3"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "xs = np.array([-1.0, 0.0, 1.0, 2.0, 3.0, 4.4], dtype=float)\n",
-        "ys = np.array([-3.0, -1.0, 1.0, 3.0, 5.0, 7.4], dtype=float)"
+        "xs = np.array([-1.0, 0.0, 1.0, 2.0, 3.0, 4.0], dtype=float)\n",
+        "ys = np.array([-3.0, -1.0, 1.0, 3.0, 5.0, 7.0], dtype=float)"
       ],
       "metadata": {
         "id": "NOjLEHSimSgW"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -87,19 +87,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_ka8XnqDmswf",
-        "outputId": "dbf87ae7-d927-4d58-a58e-616a9f9a0768"
+        "outputId": "50245e8c-f336-40aa-ce86-b175eaa1017d"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f7fb1c31c00>"
+              "<keras.callbacks.History at 0x7f7fb11ef460>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -113,16 +113,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UauwCjalm29-",
-        "outputId": "b3a56878-f1ba-4a8d-8240-0c86907a9f0b"
+        "outputId": "c9784019-ed87-41be-d776-34b201866589"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 92ms/step\n",
-            "[[18.430555]]\n"
+            "1/1 [==============================] - 0s 91ms/step\n",
+            "[[18.983337]]\n"
           ]
         }
       ]
